# service/user.go
@@ -2,10 +2,13 @@ package service
 
 import (
 	"fmt"
+	"time"
 
 	"github.com/api/common/config"
 	"github.com/api/common/database"
+	"github.com/api/common/database/schema"
 	"github.com/api/repository/response"
+	"github.com/api/util"
 	"github.com/gofiber/fiber/v2"
 	"github.com/google/uuid"
 )
@@ -47,4 +50,63 @@ func GetUser(c *fiber.Ctx) error {
 	response.Result = user
 	return c.Status(fiber.StatusOK).JSON(response)
 
+}
+
+// CreateUser func creates a new user.
+// @Description Create a new user.
+// @Summary create a new user
+// @Tags User
+// @Accept json
+// @Produce json
+// @Param username body string true "Username"
+// @Param password body string true "Password"
+// @Param email body string true "Email"
+// @Param telephone body string true "telephone"
+// @Success 200 {object} response.RequestResponse
+// @Router /api/users/create [post]
+func CreateUser(c *fiber.Ctx) error {
+	var cfg config.AppConfig
+	// Get now time.
+	now := time.Now().UTC()
+	// Create new User struct
+	user := &schema.User{}
+	newErr := response.NewErrorResponse()
+	// Check, if received JSON data is valid.
+	if err := c.BodyParser(user); err != nil {
+		newErr.Code = fiber.ErrBadRequest.Code
+		cfg.Logger.Error(err.Error())
+		return c.Status(newErr.Code).JSON(newErr)
+
+	}
+	// Create database connection.
+	db, err := database.DbWithQueries(&cfg)
+	if err != nil {
+		newErr.Message = "Couldnt connect to DB!"
+		cfg.Logger.Error(fmt.Sprintf("Couldnt connect to DB!: %s", err))
+		return c.Status(fiber.StatusInternalServerError).JSON(newErr)
+	}
+
+	audit := &schema.AuditEntity{CreatedAt: now, LastModifiedAt: now, LastModifiedBy: "none", CreatedBy: user.Email}
+	// Set initialized default data for user:
+	user.Userid = uuid.New()
+	user.AuditInfo = *audit
+	user.Discount = 0.0
+	user.Admin = false
+	user.Enabled = true
+	user.FailedAttempt = 0
+	user.AccountNonLocked = false
+	// Validate user fields.
+	if err := cfg.Validate.Struct(user); err != nil {
+		// Return, if some fields are not valid.
+		newErr.Code = fiber.ErrBadRequest.Code
+		newErr.Message = fmt.Sprintf("Errors : %v", util.ValidatorErrors(err))
+		return c.Status(newErr.Code).JSON(newErr)
+	}
+	if err := db.CreateUser(user); err != nil {
+		newErr.Message = err.Error()
+		return c.Status(fiber.StatusInternalServerError).JSON(newErr)
+	}
+	response := response.NewResponse(c)
+	response.Result = user.Userid
+	return c.Status(fiber.StatusOK).JSON(response)
 }
